--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.4"
 futures-util = "0.3.31"
 serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.46.1", features = ["full"] }
-tokio-tungstenite-wasm = { version = "0.6.0", features = ["native-tls"] }
+serde_json = "1.0.140"
+tokio = { version = "1.46.1", features = ["sync"] }
+tokio-tungstenite-wasm = "0.6.0"
 wasm-bindgen = { version = "0.2.100", features = ["serde", "serde_json"] }
+wasm-bindgen-futures = "0.4.50"
 yew = { version = "0.21.0", features = ["csr"] }
 
 [lib]
