--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2024"
 futures-channel = "0.3.31"
 futures-util = "0.3.31"
 tokio = { version = "1.46.1", features = ["full"] }
-tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.27.0", features = ["rustls"] }
